@@ -83,6 +83,7 @@ Cacti CHANGELOG
 -feature: Add Enable/Disable user
 -feature: Add copy and batch copy of users
 -feature: Reduce ADODB memory consumption during polling
+-feature: Add new RRDtool Function to facilitate CSV export
 -compat: Add additional checking due to php-snmp changes in Windows
 
 0.8.6j
